--- a/config/database.yml
+++ b/config/database.yml
@@ -57,6 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  database: peoplefinder_test
   url: <%= ENV["DATABASE_URL"] %>
 
 # As with config/secrets.yml, you never want to store sensitive information,
